--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  challenge-app:
+  app:
     build: .
     ports:
       - "8080:80"
@@ -10,7 +10,7 @@ services:
     networks:
       - challenge-network
 
-  mysql-app:
+  db:
     image: mysql:5.7.22
     ports:
       - "3306:3306"
